--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -2160,8 +2160,8 @@ Wie in der Konzeption (Abschnitt~\ref{chapter:konzeption}) erläutert, musste di
 
 \begin{itemize}
 	\item \texttt{loadTestdata( data )} lädt Testdaten in die Komponente. Diese werden als String übergeben, um kein Serialisierungsformat (z.\,B. JSON oder XML) vorzuschreiben. Das Parsen des Strings ist der Komponente überlassen.
-	\item \texttt{coordinatesToData( x1, y1, x2, y2 )} wandelt das durch die vier Koordinaten angegebene Rechteck in Grenzwerte von Properties um. Dabei wird ein JSON Array von Objekten mit Attributen \texttt{uri}, \texttt{from} und \texttt{to} zurückgegeben. Für jede in der Komponente dargestellte Property findet sich ein durch die URI gekennzeichnetes Objekt im Array. Weist eine Property ein nominales Scale of Measurement auf, sind \texttt{from} und \texttt{to} identisch und enthalten ein Array von möglichen Werten.
-	\item \texttt{dataToCoordinates( p1, p2 ... )} wandelt von \texttt{coordinatesToData} erhaltene \enquote{Grenzpunkte} wieder in Koordinaten um. Dabei liefert die Methode ein Objekt mit den Attributen \texttt{x1}, \texttt{x2}, \texttt{y1} und \texttt{y2} zurück.
+	\item \texttt{coordinatesToData( x1, y1, x2, y2 )} wandelt das durch die vier Koordinaten angegebene Rechteck in Grenzwerte von Properties um. Dabei wird ein JSON Array von Objekten mit Attributen \texttt{uri}, \texttt{from} und \texttt{to} zurückgegeben. Für jede in der Komponente dargestellte Property, welche mit den visuellen Attributen Breite, Höhe oder Position kodiert ist, findet sich ein durch die URI gekennzeichnetes Objekt im Array. Weist eine Property ein nominales Scale of Measurement auf, sind \texttt{from} und \texttt{to} identisch und enthalten ein Array von möglichen Werten.
+	\item \texttt{dataToCoordinates( p1, p2 ... )} wandelt von \texttt{coordinatesToData} erhaltene \enquote{Grenzpunkte} wieder in Koordinaten um. Dazu liefert die Methode ein Objekt mit den Attributen \texttt{x1}, \texttt{x2}, \texttt{y1} und \texttt{y2} zurück.
 	\item \texttt{getVisualizedProperties()} liefert ein Array mit den URIs der in der Komponente visualisierten Properties zurück. Das ist notwendig, damit das Hilfesystem Kommentare für Komponenten laden kann.
 	\item \texttt{getDataFromResource()} gibt die Werte der dargestellten Properties eines Datenpunkts zurück.
 \end{itemize}
@@ -2243,7 +2243,7 @@ In diesem Abschnitt werden die Grenzen der gewählten Strategien zur Darstellung
 
 % performance
 
-Ein weiteres Problem der vorgestellten und implementierten Bedienungshilfe ist Performance. War das Markup der Komponente tief verschachtelt, dauerte die Generierung der Kopien der relevanten UI Elemente bis zu 15 Sekunden. Das war bei der ExtJS Tabelle mit Testdaten von 60~Filmen in 6~Spalten der Fall, mit größeren Datensätzen würde es noch viel länger dauern. Nach einer Inspektion mit den Chrome Developer Tools stellte sich heraus, dass eine Kombination aus exzessivem \enquote{Layout Thrashing} und häufiger Garbage Collection das Problem war. Das Layout Thrashing hatte folgende Auslöser: Zunächst musste für jedes der relevanten Elemente die sichtbare Bounding Box berechnet werden, wofür Zugriff auf die Offsets nötig ist. Dafür wird ein aktuelles Layout benötigt, der Browser muss es also berechnen. Danach wird die Kopie in den DOM eingefügt, was das Layout invalidiert und es somit beim nächsten Element erneut berechnet werden muss. Zum Teil kann der Algorithmus bestimmt optimiert werden, aber nachdem Datensätze in VizBoard beliebig groß und Komponenten in CRUISe beliebig verschachtelt sein können, sollte auf diese Art der Darstellung verzichtet werden. Stattdessen sollten relevante UI Elemente in ihrer normalen Umgebung hervorgehoben werden, ohne aufwändige Erstellung von Kopien.
+Ein weiteres Problem der vorgestellten und implementierten Bedienungshilfe ist Performance. War das Markup der Komponente tief verschachtelt, dauerte die Generierung der Kopien der relevanten UI Elemente bis zu 15 Sekunden. Das war bei einer ExtJS Tabelle mit Testdaten von 60~Filmen in 6~Spalten der Fall, mit größeren Datensätzen würde es noch viel länger dauern. Nach einer Inspektion mit den Chrome Developer Tools stellte sich heraus, dass eine Kombination aus exzessivem \enquote{Layout Thrashing} und häufiger Garbage Collection das Problem war. Das Layout Thrashing hatte folgende Auslöser: Zunächst musste für jedes der relevanten Elemente die sichtbare Bounding Box berechnet werden, wofür Zugriff auf die Offsets nötig ist. Dafür wird ein aktuelles Layout benötigt, der Browser muss es also berechnen. Danach wird die Kopie in den DOM eingefügt, was das Layout invalidiert und es somit beim nächsten Element erneut berechnet werden muss. Zum Teil kann der Algorithmus bestimmt optimiert werden, aber nachdem Datensätze in VizBoard beliebig groß und Komponenten in CRUISe beliebig verschachtelt sein können, sollte auf diese Art der Darstellung verzichtet werden. Stattdessen sollten relevante UI Elemente in ihrer normalen Umgebung hervorgehoben werden, ohne aufwändige Erstellung von Kopien.
 
 % panels
 
@@ -2265,7 +2265,7 @@ In Abbildung~\ref{figure:ui-howto-step2-bad} ist die SIMILE Timeline\footnote{\u
    \label{figure:ui-howto-step2-bad}
 \end{figure}
 
-Eine mögliche Lösung wäre das quadratische Panel immer zu füllen. Dann stellt sich allerdings die Frage, welcher Ausschnitt des Bilds gezeigt und wie dieser bestimmt und gefunden werden soll. Füllt man beispielsweise von links, sähe man in diesem Beispiel in allen Bildern hauptsächlich graue Fläche. Dem Problem könnte auch beigekommen werden, wenn die Panels das Seitenverhältnis ihrer Bilder annähmen. Allerdings ist das Layout der Panels dann unvorhersehbar. Ein Kompromiss könnte sein, die Panels quadratisch zu lassen und die Bilder füllend darzustellen, aber es dem Benutzer zu ermöglichen, innerhalb der Panels zu scrollen. Da aber hier die Interaktion etwas kompliziert würde, sollte zunächst ein passender Layoutalgorithmus versucht werden. Dass ein ansprechenderes Layout als aneinandergereihte Quadrat nötig ist, wurde schon in der formativen Nutzerstudie klar. Dieses sollte außerdem das Seitenverhältnis der einzelnen Bilder möglichst beibehalten.
+Eine mögliche Lösung wäre das quadratische Panel immer zu füllen. Dann stellt sich allerdings die Frage, welcher Ausschnitt des Bilds gezeigt und wie dieser bestimmt und gefunden werden soll. Füllt man beispielsweise von links, sähe man in diesem Beispiel in allen Bildern hauptsächlich graue Fläche. Dem Problem könnte auch beigekommen werden, wenn die Panels das Seitenverhältnis ihrer Bilder annähmen. Allerdings ist das Layout der Panels dann unvorhersehbar. Ein Kompromiss könnte sein, die Panels quadratisch zu lassen und die Bilder füllend darzustellen, aber es dem Benutzer zu ermöglichen, innerhalb der Panels zu scrollen. Da aber hier die Interaktion etwas kompliziert würde, sollte zunächst ein passender Layoutalgorithmus versucht werden. Er sollte sowohl das Seitenverhältnis der einzelnen Bilder möglichst beibehalten, als auch einem Comic ähneln. Dass ein ansprechenderes Layout als aneinandergereihte Quadrate nötig ist, wurde schon in der formativen Nutzerstudie klar. 
 
 \subsection{Kommunikation}
 \label{section:implementierung:frontend:kommunikation}
